# airhorn-supremacy

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
cogs/: airhorn.py  config.py
